tests/parser/parse-do.3.bad.coalton
;; BAD: Parse Do
(package test-package)

(define x
  (do (let x = 5)))
